2021.05/TodoQueue.md
# ing..

프로젝트 4 - 에어비앤비

- 매일 회고 쓰기
- 예약 API 만드는 중
- [Github OAuth 연결 with POSTMAN by 동](https://velog.io/@d-h-k/Oauth-%EC%B0%8D%EB%A8%B9%ED%95%B4%EB%B3%B4%EA%B8%B0-with-POSTMAN%EC%8B%A4%EC%8A%B5) 따라하는 중
- 숙소 필터링 디버깅...



# Todo Queue

- VPC 실습 듣기(루카스 자료)


- AWS VPC - EC2서브넷과 DB서브넷 구분 생성
  - [yeon이 공유해 주신 DB서버와 웹서버 분리하는 법](https://velog.io/@yeon/public-subnet%EA%B3%BC-private-subnet%EC%97%90-%EC%9B%B9%EC%84%9C%EB%B2%84%EC%99%80-%EB%8D%B0%EC%9D%B4%ED%84%B0%EB%B2%A0%EC%9D%B4%EC%8A%A4-%EB%B6%84%EB%A6%AC%ED%95%B4%EC%84%9C-%EB%B0%B0%ED%8F%AC%ED%95%98%EA%B8%B0)
- AWS S3 에서 jar 감지해 자동배포
- [Nginx와 SpringBoot내장Tomcat 연동 (80포트를 8080포트로 리다이렉트하는법)](https://velog.io/@damiano1027/Nginx-Nginx%EC%99%80-SpringBoot-%EB%82%B4%EC%9E%A5-Tomcat-%EC%97%B0%EB%8F%99)
  - 스타브의 비밀노트 참고하기(in 슬랙)
- [Github OAuth 연결 with POSTMAN by 동](https://velog.io/@d-h-k/Oauth-%EC%B0%8D%EB%A8%B9%ED%95%B4%EB%B3%B4%EA%B8%B0-with-POSTMAN%EC%8B%A4%EC%8A%B5)!
- [JWT 토큰 기반 인증](https://velopert.com/2350), [JWT 소개(NHN블로그)](https://meetup.toast.com/posts/239)



---

- OOP 특징(Encapsulation, Inheritance, Abstraction, Polymorphism),
  Solid원칙(Single Responsibility Principle, Open / Closed Principle, Liskov's Substitution Principle, Interface Segregation Principle, Dipendency Inversion Principle) 내 말로 요약 정리하기

---

- 미션5피드백 달린 것 자세히 보고 정리하기

  https://github.com/codesquad-members-2021/spring-boot-qna/pull/133

- 미션6페이징 이어서 하기

  - 이노가 알려준 참고링크들.

    >https://gonyda.tistory.com/15
    >
    >https://gonyda.tistory.com/16
    >
    >https://lkhlkh23.tistory.com/84 - Page 메서드들
    >
    >https://github.surf/eNoLJ/spring-boot-qna/blob/mission6/src/main/java/com/codessquad/qna/controller/QuestionController.java 이노의 미션6 깃서프

- 블로그 포스팅 정리

- Optional

  - https://mangkyu.tistory.com/70 

- Logger, LoggerFactory 공부해서 사용하기(루카스 '로깅 라이브러리'참고)

- 스프링MVC구조 및 Model, Domain에 대해 아래 링크 참고해서 더 공부하기.

  - [What is the difference between an MVC Model object, a domain object and a DTO](https://stackoverflow.com/questions/3853749/what-is-the-difference-between-an-mvc-model-object-a-domain-object-and-a-dto)
  - [Spring MVC 구조에 대한 좋은 그림과 설명](https://justforchangesake.wordpress.com/2014/05/07/spring-mvc-request-life-cycle/)

- [스프링 웹 계층](https://www.petrikainulainen.net/software-development/design/understanding-spring-web-application-architecture-the-classic-way/)

