2021.06/TodoQueue.md
# ing..

- 부스트캠프 코테 대비

  - 프로그래머스 레벨 1~2 다 풀어보기 / 3도 가능하면 풀어보기
  
  - BFS? DFS?
  
    문제 풀이도 보면서 공부하기.
  
- issue-tracker 프로젝트 진행 중

  - 전체 작성자, 담당자 조회 api (id 포함 모든 user정보)

  - PR 날리기

  - 이슈 수정/삭제 시 이슈 작성자  = User인지 확인 후 진행되게 하기?

  - ElasticSerch 

    >  https://esbook.kimjmin.net/ 또는 AmazonElasticserchService 참고
  
    - Spring data elasticserch : https://velog.io/@hanblueblue/%EB%B2%88%EC%97%AD-spring-data-elasticsearch,  https://docs.spring.io/spring-data/elasticsearch/docs/4.2.1/reference/html/#repositories.core-concepts참고
    - spring boot + spring data + elasticserch https://kimseunghyun76.tistory.com/444
  
  - 토큰이 만료되었을 때 발생시킬 에러 만들기
  
  - API 전체적으로 테스트하기
  
  - S3에 이미지 업로드하는 법 https://devlog-wjdrbs96.tistory.com/213

serialize : 객체를 byte로 변환

deserialize : byte를 객체로 돌려놓기

왜 하는가? 모든 컴퓨터는 byte 기반으로 작동하기 때문에, 객체를 지원하지 않는 곳에서도 사용하기 위해서 serialize/deserialize를 한다.

# Todo Queue

- 자바 널체크 : ==와 equals()의 차이
  - https://lovefor-you.tistory.com/113
- 동의 GIthub OAuth 구현하기
  - [Velog](https://velog.io/@d-h-k/Oauth-%EC%B0%8D%EB%A8%B9%ED%95%B4%EB%B3%B4%EA%B8%B0-with-POSTMAN%EC%8B%A4%EC%8A%B5), [깃헙 공식문서](https://docs.github.com/en/developers/apps/building-oauth-apps/authorizing-oauth-apps)
- VPC 실습 듣기(루카스 자료)


- AWS VPC - EC2서브넷과 DB서브넷 구분 생성
  - [yeon이 공유해 주신 DB서버와 웹서버 분리하는 법](https://velog.io/@yeon/public-subnet%EA%B3%BC-private-subnet%EC%97%90-%EC%9B%B9%EC%84%9C%EB%B2%84%EC%99%80-%EB%8D%B0%EC%9D%B4%ED%84%B0%EB%B2%A0%EC%9D%B4%EC%8A%A4-%EB%B6%84%EB%A6%AC%ED%95%B4%EC%84%9C-%EB%B0%B0%ED%8F%AC%ED%95%98%EA%B8%B0)


---

- OOP 특징(Encapsulation, Inheritance, Abstraction, Polymorphism),
  Solid원칙(Single Responsibility Principle, Open / Closed Principle, Liskov's Substitution Principle, Interface Segregation Principle, Dipendency Inversion Principle) 내 말로 요약 정리하기

---

- 미션5피드백 달린 것 자세히 보고 정리하기

  https://github.com/codesquad-members-2021/spring-boot-qna/pull/133

- 미션6페이징 이어서 하기

  - 이노가 알려준 참고링크들.

    >https://gonyda.tistory.com/15
    >
    >https://gonyda.tistory.com/16
    >
    >https://lkhlkh23.tistory.com/84 - Page 메서드들
    >
    >https://github.surf/eNoLJ/spring-boot-qna/blob/mission6/src/main/java/com/codessquad/qna/controller/QuestionController.java 이노의 미션6 깃서프

- 블로그 포스팅 정리

- Optional

  - https://mangkyu.tistory.com/70 

- Logger, LoggerFactory 공부해서 사용하기(루카스 '로깅 라이브러리'참고)

- 스프링MVC구조 및 Model, Domain에 대해 아래 링크 참고해서 더 공부하기.

  - [What is the difference between an MVC Model object, a domain object and a DTO](https://stackoverflow.com/questions/3853749/what-is-the-difference-between-an-mvc-model-object-a-domain-object-and-a-dto)
  - [Spring MVC 구조에 대한 좋은 그림과 설명](https://justforchangesake.wordpress.com/2014/05/07/spring-mvc-request-life-cycle/)

- [스프링 웹 계층](https://www.petrikainulainen.net/software-development/design/understanding-spring-web-application-architecture-the-classic-way/)

